texgenpack/texgenpack.h

// Structures.

typedef struct {
	unsigned int *pixels;
	int width;
	int height;
	int extended_width;
	int extended_height;
	int alpha_bits;			// 0 for no alpha, 1 if alpha is limited to 0 and 0xFF, 8 otherwise.
	int nu_components;		// Indicates the number of components.
	int bits_per_component;		// 8 or 16.
	int is_signed;			// 1 if the components are signed, 0 if unsigned.
	int srgb;			// Whether the image is stored in sRGB format.
	int is_half_float;		// The image pixels are combinations of half-floats. The pixel size is 64-bit.
} Image;
typedef struct {
	int type;
	int ktx_support;
	int dds_support;
	const char *text1;
	const char *text2;
	int block_width;		// The block width (1 for uncompressed textures).
	int block_height;		// The block height (1 for uncompressed textures).
	int bits_per_block;		// The number of bits per block (per pixel for uncompressed textures).
	int internal_bits_per_block;	// The number of bits per block as stored internally (per pixel for uncompressed).
	int alpha_bits;
	int nu_components;
	int gl_internal_format;
	int gl_format;
	int gl_type;
	const char *dx_four_cc;
	int dx10_format;
	uint64_t red_mask, green_mask, blue_mask, alpha_mask;
} TextureInfo;
typedef struct BlockUserData_t BlockUserData;
typedef int (*TextureDecodingFunction)(const unsigned char *bitstring, unsigned int *image_buffer, int flags);
typedef double (*TextureComparisonFunction)(unsigned int *image_buffer, BlockUserData *user_data);
typedef int (*TextureGetModeFunction)(const unsigned char *bitstring);
typedef void (*TextureSetModeFunction)(unsigned char *bitstring, int flags);
typedef struct {
	unsigned int *pixels;
	int width;
	int height;
	int extended_width;
	int extended_height;
	int type;
	int bits_per_block;		// The bits per block of the real format. The internally used bits per block is
					// given by info->internal_bits_per_block.
	int block_width;
	int block_height;
	TextureDecodingFunction decoding_function;
	TextureComparisonFunction comparison_function;
	TextureComparisonFunction perceptive_comparison_function;
	TextureGetModeFunction get_mode_function;
	TextureSetModeFunction set_mode_function;
	TextureInfo *info;
} Texture;
struct BlockUserData_t {
	unsigned int *image_pixels;
	int image_rowstride;
	int x_offset;
	int y_offset;
	int flags;
	Texture *texture;
	unsigned char *alpha_pixels;
	unsigned int *colors;
	int stop_signalled;
	int pass;
	unsigned int *texture_pixels;
	unsigned int *texture_pixels_above;
	unsigned int *texture_pixels_left;
};
// Defined in file.c

void load_pkm_file(const char *filename, Texture *texture);
void save_pkm_file(Texture *texture, const char *fikename);
int load_ktx_file(const char *filename, int max_mipmaps, Texture *texture);
void save_ktx_file(Texture *texture, int nu_mipmaps, const char *filename);
int load_dds_file(const char *filename, int max_mipmaps, Texture *texture);
void save_dds_file(Texture *texture, int nu_mipmaps, const char *filename);
void load_astc_file(const char *filename, Texture *texture);
void save_astc_file(Texture *texture, const char *filename);
void load_ppm_file(const char *filename, Image *image);
void load_png_file(const char *filename, Image *image);
void save_png_file(Image *image, const char *filename);
// Defined in texture.c

TextureInfo *match_texture_type(int type);
TextureInfo *match_texture_description(const char *s);
TextureInfo *match_ktx_id(int gl_internal_format, int gl_format, int gl_type);
TextureInfo *match_dds_id(const char *four_cc, int dx10_format, uint32_t pixel_format_flags, int bitcount,
uint32_t red_mask, uint32_t green_mask, uint32_t blue_mask, uint32_t alpha_mask);
const char *texture_type_text(int texture_type);
int get_number_of_texture_formats();
const char *get_texture_format_index_text(int i, int j);
void set_texture_decoding_function(Texture *texture, Image *image);
// Defined in compare.c

extern float *half_float_table;
extern float *gamma_corrected_half_float_table;
extern float *normalized_float_table;
double compare_block_any_size_rgba(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_4x4_rgb(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_perceptive_4x4_rgb(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_4x4_rgba(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_perceptive_4x4_rgba(unsigned int *image_buffer, BlockUserData *user_data);
void calculate_normalized_float_table();
double compare_block_4x4_rgb8_with_half_float(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_4x4_rgba8_with_half_float(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_4x4_8_bit_components(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_4x4_signed_8_bit_components(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_4x4_8_bit_components_with_16_bit(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_4x4_signed_8_bit_components_with_16_bit(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_4x4_r16(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_4x4_rg16(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_4x4_r16_signed(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_4x4_rg16_signed(unsigned int *image_buffer, BlockUserData *user_data);
void calculate_half_float_table();
double compare_block_4x4_rgb_half_float(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_4x4_rgba_half_float(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_4x4_r_half_float(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_4x4_rg_half_float(unsigned int *image_buffer, BlockUserData *user_data);
void calculate_gamma_corrected_half_float_table();
double compare_block_4x4_rgb_half_float_hdr(unsigned int *image_buffer, BlockUserData *user_data);
double compare_block_4x4_rgba_half_float_hdr(unsigned int *image_buffer, BlockUserData *user_data);
// Defined in half_float.c

int halfp2singles(void *target, void *source, int numel);
int singles2halfp(void *target, void *source, int numel);
// Defined in calibrate.c

void calibrate_genetic_parameters(Image *image, int texture_type);