texgen.pxd

	
	cdef void load_pkm_file(const char *filename, Texture *texture)
	cdef void save_pkm_file(Texture *texture, const char *fikename)
	cdef int load_ktx_file(const char *filename, int max_mipmaps, Texture *texture)
	cdef void save_ktx_file(Texture *texture, int nu_mipmaps, const char *filename)
	cdef int load_dds_file(const char *filename, int max_mipmaps, Texture *texture)
	cdef void save_dds_file(Texture *texture, int nu_mipmaps, const char *filename)
	cdef void load_astc_file(const char *filename, Texture *texture)
	cdef void save_astc_file(Texture *texture, const char *filename)
	cdef void load_ppm_file(const char *filename, Image *image)
	cdef void load_png_file(const char *filename, Image *image)
	cdef void save_png_file(Image *image, const char *filename)
	
	# Defined in texture.c
	
	TextureInfo *match_texture_type(int type)
	TextureInfo *match_texture_description(const char *s)
	TextureInfo *match_ktx_id(int gl_internal_format, int gl_format, int gl_type)
	TextureInfo *match_dds_id(const char *four_cc, int dx10_format, uint32_t pixel_format_flags, int bitcount,
	uint32_t red_mask, uint32_t green_mask, uint32_t blue_mask, uint32_t alpha_mask)
	const char *texture_type_text(int texture_type)
	cdef int get_number_of_texture_formats()
	const char *get_texture_format_index_text(int i, int j)
	cdef void set_texture_decoding_function(Texture *texture, Image *image)
	
	# Defined in compare.c
	
	extern float *half_float_table
	extern float *gamma_corrected_half_float_table
	extern float *normalized_float_table
	
	cdef double  compare_block_any_size_rgba(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_4x4_rgb(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_perceptive_4x4_rgb(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_4x4_rgba(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_perceptive_4x4_rgba(unsigned int *image_buffer, BlockUserData *user_data)
	cdef void calculate_normalized_float_table()
	cdef double  compare_block_4x4_rgb8_with_half_float(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_4x4_rgba8_with_half_float(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_4x4_8_bit_components(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_4x4_signed_8_bit_components(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_4x4_8_bit_components_with_16_bit(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_4x4_signed_8_bit_components_with_16_bit(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_4x4_r16(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_4x4_rg16(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_4x4_r16_signed(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_4x4_rg16_signed(unsigned int *image_buffer, BlockUserData *user_data)
	cdef void calculate_half_float_table()
	cdef double  compare_block_4x4_rgb_half_float(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_4x4_rgba_half_float(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_4x4_r_half_float(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_4x4_rg_half_float(unsigned int *image_buffer, BlockUserData *user_data)
	cdef void calculate_gamma_corrected_half_float_table()
	cdef double  compare_block_4x4_rgb_half_float_hdr(unsigned int *image_buffer, BlockUserData *user_data)
	cdef double  compare_block_4x4_rgba_half_float_hdr(unsigned int *image_buffer, BlockUserData *user_data)
	
	# Defined in half_float.c
	
	cdef int halfp2singles(void *target, void *source, int numel)
	cdef int singles2halfp(void *target, void *source, int numel)
	
	# Defined in calibrate.c
	
	cdef void calibrate_genetic_parameters(Image *image, int texture_type)

